tests/contract_testcases/polkadot/tags/event_tag_01.sol

        /// @param g
        event x (
            uint32 f
        );
// ---- Expect: diagnostics ----
// error: 2:20-21: tag '@param' no field 'g'
